Fix opacity on IE

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -288,7 +288,7 @@ figcaption {
     height: 20px;
     bottom: 70px;
     right: 0px;
-    opacity: 0.7;
+    .opacity(0.7);
     &:hover, &:active {
         text-decoration: none;
         color: darken(@color2, 10%);
